--- a/gallery.css
+++ b/gallery.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("./pic14.jpg");
+    background-image: url("./imagess/images/pic14.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
